[project]
name = "llm-x"
version = "0.1.0"
description = "High-accuracy Python library for inference memory estimation with real hardware detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sheikyon"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "safetensors>=0.4",
    "psutil>=5.9",
    "nvidia-ml-py>=12.535.133",
]

[project.scripts]
llm-x = "llm_x.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_x"]